# courses

./: .gitignore
bonus-unit1/: fine-tune.py
huggingface-agents-course/bonus-unit1/: readme.md
huggingface-agents-course/llamaindex/: 00_introduction.py  pyproject.toml
huggingface-agents-course/smolagents/: basic_retrieval_with_duckduckgo.py  helpers.py  mcp_integration.py  menu.py  multiagent_part1.py  multiagent_part2.py  party_image.py  party_panner.py  pyproject.toml  save_map.py
llamaindex/: README.md  pyproject.toml
smolagents/: README.md  arguments_helper.py  basic_vision.py  custom_knowledge_base_tool.py  helpers.py  langchain_tool_integration.py  multiagent_part1.py  playlist.py  playlist_json_tool.py  preparation_time.py  pyproject.toml  verify_openrouter_json_tools.py  vision_and_browser.py
smollagents/: README.md  main.py  menu.py  party_panner.py  playlist.py  preparation_time.py  pyproject.toml
