[project]
name = "smollagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "huggingface-hub>=0.29.3",
    "openinference-instrumentation-smolagents>=0.1.8",
    "opentelemetry-exporter-otlp>=1.31.1",
    "opentelemetry-sdk>=1.31.1",
    "smolagents[litellm]>=1.12.0",
]
