[project]
name = "smollagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "duckduckgo-search>=7.5.5",
    "gradio-client>=1.8.0",
    "huggingface-hub>=0.29.3",
    "kaleido==0.2.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "openinference-instrumentation-smolagents>=0.1.8",
    "opentelemetry-exporter-otlp>=1.31.1",
    "opentelemetry-sdk>=1.31.1",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
    "smolagents[litellm,mcp]>=1.12.0",
]
